max height fix and slider arrows
Changed prev/next buttons on slider to arrows.

added a doctype declaration. This is needed for IE. Fixes image resizing
issue, and centering issue on module page.

changed image attribute from height to max-height, so smaller images
dont get stretched.

--- a/biy-stylesheet.css
+++ b/biy-stylesheet.css
@@ -209,7 +209,7 @@ a:hover
 }
 
 .wrapped_picture{
-	height:300px;
+	max-height:300px;
 	margin:auto;
 }
 
@@ -481,4 +481,10 @@ a:hover
 
 .new-image{
 height: 233px;
+}
+
+.slider-arrow{
+font-weight:bold; 
+font-size:16pt;
+
 }
